var hierarchy =
[
    [ "geopop::kd::BaseNode< geogrid_detail::KdTree2DPoint >", "d7/d46/a00002.html", [
      [ "geopop::kd::Node< geogrid_detail::KdTree2DPoint, 0 >", "d6/d5b/a00026.html", null ]
    ] ],
    [ "geopop::AABBox< P >", "d1/d7c/a00003.html", null ],
    [ "geopop::BoxPolicy", "d0/d0b/a00004.html", null ],
    [ "geopop::Collector< InsertIter, T >", "dd/dad/a00005.html", null ],
    [ "geopop::CommutesReader", "de/d5e/a00007.html", [
      [ "geopop::CommutesCSVReader", "de/d21/a00006.html", null ]
    ] ],
    [ "geopop::Generator< ID >", "d4/dee/a00008.html", null ],
    [ "geopop::GeoAggregator< Policy, F >", "da/da0/a00009.html", null ],
    [ "geopop::GeoAggregator< Policy >", "d7/dec/a00010.html", [
      [ "geopop::GeoAggregator< Policy, F >", "da/d45/a00011.html", null ]
    ] ],
    [ "geopop::GeoGrid", "df/d86/a00012.html", null ],
    [ "geopop::geogrid_detail::KdTree2DPoint", "d7/dd4/a00013.html", null ],
    [ "geopop::geogrid_detail::KdTree2DPoint::dimension_type< D >", "d2/de7/a00014.html", null ],
    [ "geopop::GeoGridConfig", "dd/d1b/a00015.html", null ],
    [ "geopop::GeoGridReader", "db/db2/a00020.html", [
      [ "geopop::GeoGridJSONReader", "d7/d7a/a00016.html", null ],
      [ "geopop::GeoGridProtoReader", "d1/d2b/a00018.html", null ]
    ] ],
    [ "geopop::GeoGridReaderFactory", "de/d11/a00021.html", null ],
    [ "geopop::GeoGridWriter", "d7/de0/a00022.html", [
      [ "geopop::GeoGridJSONWriter", "d4/d51/a00017.html", null ],
      [ "geopop::GeoGridProtoWriter", "dd/da2/a00019.html", null ]
    ] ],
    [ "geopop::GeoGridWriterFactory", "d3/d52/a00023.html", null ],
    [ "geopop::HouseholdReader", "d3/dfe/a00025.html", [
      [ "geopop::HouseholdCSVReader", "dc/de2/a00024.html", null ]
    ] ],
    [ "geopop::kd::BaseNode< P >", "d7/d46/a00002.html", [
      [ "geopop::kd::Node< P, D >", "d6/d5b/a00026.html", null ],
      [ "geopop::kd::Node< P, 0 >", "d6/d5b/a00026.html", null ]
    ] ],
    [ "geopop::KdTree< P >", "d0/d33/a00027.html", null ],
    [ "geopop::Location", "dc/d3c/a00028.html", null ],
    [ "geopop::LocationsReader", "d5/d79/a00030.html", [
      [ "geopop::LocationsCSVReader", "d5/d16/a00029.html", null ]
    ] ],
    [ "geopop::PolygonPolicy", "df/d61/a00031.html", null ],
    [ "geopop::PoolParams< ID >", "dc/d87/a00032.html", null ],
    [ "geopop::PoolParams< stride::ContactType::Id::College >", "d0/dc0/a00033.html", null ],
    [ "geopop::PoolParams< stride::ContactType::Id::Household >", "db/df3/a00034.html", null ],
    [ "geopop::PoolParams< stride::ContactType::Id::K12School >", "d4/d8c/a00035.html", null ],
    [ "geopop::PoolParams< stride::ContactType::Id::PrimaryCommunity >", "de/d8c/a00036.html", null ],
    [ "geopop::PoolParams< stride::ContactType::Id::SecondaryCommunity >", "d1/dc6/a00037.html", null ],
    [ "geopop::PoolParams< stride::ContactType::Id::Workplace >", "d8/d41/a00038.html", null ],
    [ "geopop::Populator< ID >", "d3/de7/a00039.html", null ],
    [ "geopop::RadiusPolicy", "db/d3a/a00040.html", null ],
    [ "geopop::ReaderFactory", "dd/d32/a00041.html", null ],
    [ "Message", "d6/d42/a00043.html", [
      [ "proto::GeoGrid", "d6/d97/a00045.html", null ],
      [ "proto::GeoGrid_Location", "d3/dea/a00046.html", null ],
      [ "proto::GeoGrid_Location_Commute", "d6/d2d/a00047.html", null ],
      [ "proto::GeoGrid_Location_ContactPools", "d4/dca/a00048.html", null ],
      [ "proto::GeoGrid_Location_ContactPools_ContactPool", "d2/dee/a00049.html", null ],
      [ "proto::GeoGrid_Location_Coordinate", "d5/de0/a00050.html", null ],
      [ "proto::GeoGrid_Person", "d2/d79/a00051.html", null ]
    ] ],
    [ "geopop::KdTree< geogrid_detail::KdTree2DPoint >", "d0/d33/a00027.html", null ],
    [ "stride::util::SegmentedVector< Person, 2048 >", "dc/dee/a00053.html", [
      [ "stride::Population", "db/ddf/a00088.html", null ]
    ] ],
    [ "std::array< T >", null, [
      [ "stride::ContactType::IdSubscriptArray< AgeContactProfile >", "d5/df9/a00044.html", null ],
      [ "stride::ContactType::IdSubscriptArray< stride::util::stride::util::SegmentedVector< stride::stride::ContactPool * > >", "d5/df9/a00044.html", null ],
      [ "stride::ContactType::IdSubscriptArray< unsigned int >", "d5/df9/a00044.html", null ],
      [ "stride::ContactType::IdSubscriptArray< util::stride::util::SegmentedVector< stride::ContactPool > >", "d5/df9/a00044.html", null ],
      [ "stride::AgeContactProfile", "d9/d73/a00060.html", null ],
      [ "stride::ContactType::IdSubscriptArray< T >", "d5/df9/a00044.html", null ]
    ] ],
    [ "std::bitset< Bits >", null, [
      [ "stride::ContactType::IdSubscriptArray< bool >", "d9/db3/a00066.html", null ]
    ] ],
    [ "std::exception", null, [
      [ "stride::util::Exception", "d9/dcc/a00102.html", null ]
    ] ],
    [ "false_type", null, [
      [ "stride::util::is_iterator< T, class >", "d7/d70/a00106.html", null ]
    ] ],
    [ "std::map< K, T >", null, [
      [ "stride::InfectorMap", "d2/d1f/a00083.html", null ]
    ] ],
    [ "true_type", null, [
      [ "google::protobuf::is_proto_enum< ::proto::GeoGrid_Location_ContactPools_Type >", "d5/db6/a00042.html", null ],
      [ "stride::util::is_iterator< T, ii_detail::void_t< typename std::iterator_traits< T >::iterator_category > >", "df/d98/a00107.html", null ]
    ] ],
    [ "unary_function", null, [
      [ "stride::util::detail::pair2data< T, Ptree >", "d4/d3a/a00101.html", null ]
    ] ],
    [ "std::vector< T >", null, [
      [ "stride::util::Rn< pcg64 >", "d1/d84/a00052.html", null ],
      [ "stride::util::CSV", "da/d74/a00099.html", null ],
      [ "stride::util::Rn< E >", "d1/d84/a00052.html", null ]
    ] ],
    [ "stride::AbstractPopBuilder", "d1/dea/a00054.html", [
      [ "stride::DefaultPopBuilder", "d1/d6e/a00073.html", null ],
      [ "stride::GeoPopBuilder", "db/df8/a00076.html", null ],
      [ "stride::ImportPopBuilder", "da/dec/a00080.html", null ]
    ] ],
    [ "stride::AgeBrackets::College", "d4/d6d/a00055.html", null ],
    [ "stride::AgeBrackets::Daycare", "d9/d2e/a00056.html", null ],
    [ "stride::AgeBrackets::K12School", "d1/d22/a00057.html", null ],
    [ "stride::AgeBrackets::PreSchool", "d7/df7/a00058.html", null ],
    [ "stride::AgeBrackets::Workplace", "d3/d8b/a00059.html", null ],
    [ "stride::Calendar", "d4/de8/a00061.html", null ],
    [ "stride::ContactHandler", "df/d03/a00062.html", null ],
    [ "stride::ContactPool", "d1/d6f/a00063.html", null ],
    [ "stride::ContactPoolSys", "df/d5f/a00064.html", null ],
    [ "stride::ContactType::IDPack< ids >", "de/de1/a00065.html", null ],
    [ "stride::ControlHelper", "dc/ddf/a00067.html", [
      [ "stride::GenPopController", "d9/da5/a00075.html", null ],
      [ "stride::SimController", "d1/dc1/a00092.html", null ],
      [ "stride::StanController", "dc/d54/a00094.html", null ]
    ] ],
    [ "stride::DaysOffInterface", "d4/d31/a00069.html", [
      [ "stride::DaysOffAll", "da/d24/a00068.html", null ],
      [ "stride::DaysOffNone", "d2/db1/a00070.html", null ],
      [ "stride::DaysOffSchool", "d0/d89/a00071.html", null ],
      [ "stride::DaysOffStandard", "d6/d2c/a00072.html", null ]
    ] ],
    [ "stride::DiseaseSeeder", "db/db6/a00074.html", null ],
    [ "stride::Health", "d1/d09/a00077.html", null ],
    [ "stride::HealthSeeder", "d9/da4/a00078.html", null ],
    [ "stride::Immunizer", "d1/d51/a00079.html", null ],
    [ "stride::Infector< LL, TIC, TO >", "d8/d53/a00081.html", null ],
    [ "stride::Infector< LL, TIC, true >", "d4/d63/a00082.html", null ],
    [ "stride::output::InfectedFile", "df/d5d/a00084.html", null ],
    [ "stride::output::PersonsFile", "df/d13/a00085.html", null ],
    [ "stride::output::SummaryFile", "da/d2a/a00086.html", null ],
    [ "stride::Person", "d1/d1e/a00087.html", null ],
    [ "stride::PublicHealthAgency", "db/dab/a00089.html", null ],
    [ "stride::Sim", "d9/dec/a00090.html", null ],
    [ "stride::SimBuilder", "da/d82/a00091.html", null ],
    [ "stride::SurveySeeder", "d9/d77/a00095.html", null ],
    [ "stride::TransmissionProfile", "d9/df8/a00096.html", null ],
    [ "stride::util::BoxPlotData< T >", "d1/d84/a00097.html", null ],
    [ "stride::util::ConfigInfo", "d1/d44/a00098.html", null ],
    [ "stride::util::CSVRow", "d0/d61/a00100.html", null ],
    [ "stride::util::FileSys", "d5/d1e/a00103.html", null ],
    [ "stride::util::FileSys::Dirs", "d0/dc2/a00104.html", null ],
    [ "stride::util::ii_detail::make_void< Ts >", "d3/d32/a00105.html", null ],
    [ "stride::util::LogUtils", "d1/dd6/a00108.html", null ],
    [ "stride::util::RnInfo", "dd/d42/a00109.html", null ],
    [ "stride::util::RnMan", "d4/d81/a00110.html", null ],
    [ "stride::util::RunConfigManager", "dd/d6d/a00111.html", null ],
    [ "stride::util::SegmentedVector< T, N, Safe >", "dc/dee/a00053.html", null ],
    [ "stride::util::SliceIndexer< T, Key >", "db/d57/a00112.html", null ],
    [ "stride::util::Stopwatch< T >", "d3/d00/a00113.html", null ],
    [ "stride::util::Subject< E >", "d8/d17/a00114.html", null ],
    [ "stride::util::SVIterator< T, N, Safe, P, R, is_const_iterator >", "d2/da3/a00115.html", null ],
    [ "stride::util::TimeStamp", "d4/d3e/a00116.html", null ],
    [ "stride::util::TimeToString", "d9/d4b/a00117.html", null ],
    [ "stride::viewers::CliViewer", "d8/d87/a00118.html", null ],
    [ "stride::viewers::InfectedFileViewer", "df/d6a/a00119.html", null ],
    [ "stride::viewers::InfectedViewer", "d4/d98/a00120.html", null ],
    [ "stride::viewers::PersonsFileViewer", "d8/dfa/a00121.html", null ],
    [ "stride::viewers::SummaryFileViewer", "df/dc8/a00122.html", null ],
    [ "stride::util::Subject< stride::sim_event::Id >", "d8/d17/a00114.html", [
      [ "stride::SimRunner", "d4/d7d/a00093.html", null ]
    ] ],
    [ "TableStruct_geogrid_2eproto", "de/d36/a00123.html", null ],
    [ "CallbackType", "d7/d80/a00614.html", null ],
    [ "Chunk *", "db/db5/a00616.html", null ],
    [ "const void", "de/d85/a00618.html", null ],
    [ "double", "d4/dce/a00337.html", null ],
    [ "random_generator< E, randutils::seed_seq_fe128 >", "dc/db1/a00621.html", null ],
    [ "random_generator< pcg64, randutils::seed_seq_fe128 >", "df/d6f/a00623.html", null ],
    [ "size_t", "da/dbf/a00393.html", null ],
    [ "tuple< stride::ContactLogMode::Id, bool >", "d6/dfa/a00626.html", null ]
];